@@ -1,0 +1,11 @@
+<?xml version="1.0"?>
+<!-- Valid document -->
+<cb_config>
+   <amazons3>
+      <warn_midnite>Y</warn_midnite>
+      <s3_bucket>mybucket</s3_bucket>
+      <encrypt>encrypt</encrypt>
+      <full_size_limit>2.5 GB</full_size_limit>
+      <incr_size_limit>600 MB</incr_size_limit>
+   </amazons3>
+</cb_config>
